--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,10 +12,11 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["src/*"],
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "*": ["node_modules/*"]
     }
   },
-  "include": ["./src/**/*.tsx?"],
+  "include": ["./src/**/*.tsx?", "../demo-react"],
   "files": ["./references.d.ts"],
   "exclude": ["node_modules", "platforms"]
 }
