--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
         "template"
     ],
     "dependencies": {
-        "@nativescript/core": "~8.1.0",
+        "@nativescript/core": "~8.1.1",
         "@nativescript/theme": "~3.0.1",
         "@react-navigation/core": "^5.15.3",
         "react": "~16.13.1",
@@ -48,9 +48,9 @@
         "react-refresh": "~0.8.3"
     },
     "devDependencies": {
-        "@nativescript/android": "8.0.0",
-        "@nativescript/types": "~8.0.1",
-        "@nativescript/webpack": "beta",
+        "@nativescript/android": "8.1.1",
+        "@nativescript/types": "8.1.1",
+        "@nativescript/webpack": "~5.0.0",
         "@pmmmwh/react-refresh-webpack-plugin": "~0.4.0-beta.5",
         "@types/react": "16.9.34",
         "fs-extra": "~10.0.0",
