--- a/package.json
+++ b/package.json
@@ -59,5 +59,10 @@
     },
     "gitHead": "1350d382fb4b0ed4c6e9685df909518b2688e004",
     "readme": "NativeScript Application",
-    "private": "true"
+    "private": "true",
+    "dependenciesMeta": {
+        "@nativescript-community/template-snippet": {
+            "injected": true
+        }
+    }
 }
