--- a/package.json
+++ b/package.json
@@ -39,23 +39,23 @@
     ],
     "dependencies": {
         "@nativescript-community/template-snippet": "file:../demo-snippets",
-        "@nativescript/core": "~8.1.1",
-        "@nativescript/theme": "~3.0.1",
-        "@react-navigation/core": "^5.15.3",
+        "@nativescript/core": "~8.2.1",
+        "@nativescript/theme": "~3.0.2",
+        "@react-navigation/core": "~5.15.5",
         "react": "~16.13.1",
         "react-nativescript": "^3.0.0-beta.3",
         "react-nativescript-navigation": "3.0.0-beta.2",
         "react-refresh": "~0.8.3"
     },
     "devDependencies": {
-        "@nativescript/android": "8.1.1",
+        "@nativescript/android": "~8.2.2",
         "@nativescript/ios": "6.5.4",
-        "@nativescript/types": "8.1.1",
-        "@nativescript/webpack": "~5.0.0",
-        "@pmmmwh/react-refresh-webpack-plugin": "~0.4.0-beta.5",
+        "@nativescript/types": "~8.2.0",
+        "@nativescript/webpack": "~5.0.6",
+        "@pmmmwh/react-refresh-webpack-plugin": "~0.4.3",
         "@types/react": "16.9.34",
         "patch-package": "~6.2.2",
-        "typescript": "~4.2.0"
+        "typescript": "~4.5.5"
     },
     "gitHead": "1350d382fb4b0ed4c6e9685df909518b2688e004",
     "readme": "NativeScript Application",
