--- a/package.json
+++ b/package.json
@@ -58,6 +58,5 @@
         "typescript": "~4.5.5"
     },
     "gitHead": "1350d382fb4b0ed4c6e9685df909518b2688e004",
-    "readme": "NativeScript Application",
-    "private": "true"
+    "readme": "NativeScript Application"
 }
