--- a/package.json
+++ b/package.json
@@ -39,23 +39,23 @@
     ],
     "dependencies": {
         "@nativescript-community/template-snippet": "link:../demo-snippets",
-        "@nativescript/core": "~8.2.1",
+        "@nativescript/core": "~8.4.1",
         "@nativescript/theme": "~3.0.2",
         "@react-navigation/core": "~5.15.5",
         "react": "~16.13.1",
-        "react-nativescript": "^3.0.0-beta.3",
-        "react-nativescript-navigation": "3.0.0-beta.2",
-        "react-refresh": "~0.8.3"
+        "react-nativescript": "^4.0.0",
+        "react-nativescript-navigation": "4.0.0",
+        "react-refresh": "~0.14.0"
     },
     "devDependencies": {
-        "@nativescript/android": "~8.2.2",
-        "@nativescript/ios": "6.5.5",
-        "@nativescript/types": "~8.2.0",
-        "@nativescript/webpack": "~5.0.6",
-        "@pmmmwh/react-refresh-webpack-plugin": "~0.4.3",
-        "@types/react": "16.9.34",
-        "patch-package": "~6.2.2",
-        "typescript": "~4.5.5"
+        "@nativescript/android": "~8.4.0",
+        "@nativescript/ios": "8.4.0",
+        "@nativescript/types": "~8.4.0",
+        "@nativescript/webpack": "~5.0.12",
+        "@pmmmwh/react-refresh-webpack-plugin": "~0.5.10",
+        "@types/react": "18.0.26",
+        "patch-package": "~6.5.0",
+        "typescript": "~4.8.4"
     },
     "gitHead": "1350d382fb4b0ed4c6e9685df909518b2688e004",
     "readme": "NativeScript Application",
