--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
         "@nativescript/core": "~8.4.1",
         "@nativescript/theme": "~3.0.2",
         "@react-navigation/core": "~5.15.5",
-        "react": "~16.13.1",
+        "react": "^16.14.0",
         "react-nativescript": "^4.0.0",
         "react-nativescript-navigation": "4.0.0",
         "react-refresh": "~0.14.0"
@@ -53,7 +53,7 @@
         "@nativescript/types": "~8.4.0",
         "@nativescript/webpack": "~5.0.12",
         "@pmmmwh/react-refresh-webpack-plugin": "~0.5.10",
-        "@types/react": "18.0.26",
+        "@types/react": "^16.14.34",
         "patch-package": "~6.5.0",
         "typescript": "~4.8.4"
     },
