--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "@nativescript/template-blank-react",
+    "private": true,
     "version": "8.0.2",
     "description": "NativeScript Application",
     "author": "Jamie Birch <14055146+shirakaba@users.noreply.github.com>",
