--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
         "template"
     ],
     "dependencies": {
-        "@nativescript-community/template-snippet": "link:../demo-snippets",
+        "@nativescript-community/template-snippet": "0.0.1",
         "@nativescript/core": "~8.4.1",
         "@nativescript/theme": "~3.0.2",
         "@react-navigation/core": "~5.15.5",
