--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
         "@nativescript/types": "~8.4.0",
         "@nativescript/webpack": "~5.0.12",
         "@pmmmwh/react-refresh-webpack-plugin": "~0.5.10",
-        "@types/react": "^16.14.34",
+        "@types/react": "16.9.34",
         "patch-package": "~6.5.0",
         "typescript": "~4.8.4"
     },
