chore: support akylas fork for testing comparaison

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "react-refresh": "~0.14.0"
     },
     "devDependencies": {
+        "@akylas/nativescript": "~8.4.1",
         "@nativescript/android": "~8.4.0",
         "@nativescript/ios": "8.4.0",
         "@nativescript/types": "~8.4.0",
